<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_share_ico">Share</string>
    <string name="description_favorite_ico">Favorite</string>
    <string name="description_red_eye_ico">Views</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="edit_post">Edit post</string>
    <string name="save">Save</string>
    <string name="video">Video</string>
    <string name="play">Play</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_post">User %1$s published new post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="network_error">Network Error</string>
    <string name="description_attachment">Attachment</string>
    <string name="new_posts">New posts</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_auth">Authorization</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_retry">Password retry</string>
    <string name="password_not_retry">The password doesn\'t match</string>
    <string name="empty_input">All fields are not filled in</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="access_log_out">Are you sure you want to get out?</string>
    <string name="close">Close</string>
    <string name="confirm_log_in">You are not logged in, do you want to log in and become an author?</string>
    <string name="account">Account</string>
    <string name="ad_description">ad</string>

</resources>

