<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogInFragment">


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/transparentBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7F000000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/common_spacing"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="text"
            android:singleLine="true"
            tools:text="@string/login" />


        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:text="@string/password" />

        <EditText
            android:id="@+id/retryPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_retry"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:text="@string/password" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true"
            tools:text="@string/name" />


        <FrameLayout

            android:id="@+id/avatarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/avatarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:adjustViewBounds="true"

                        android:contentDescription="@string/description_photo"
                        android:src="@drawable/baseline_tag_faces_24"
                        tools:src="@tools:sample/avatars[4]" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pickPhoto"
                        style="@style/Widget.AppTheme.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/description_select_photo"
                        android:padding="@dimen/common_spacing"
                        app:icon="@drawable/ic_photo_24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/takePhoto"
                        style="@style/Widget.AppTheme.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/description_take_photo"
                        android:padding="@dimen/common_spacing"
                        app:icon="@drawable/ic_camera_24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/removePhoto"
                        style="@style/Widget.AppTheme.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/description_select_photo"
                        android:padding="@dimen/common_spacing"
                        android:visibility="gone"
                        app:icon="@drawable/baseline_delete_24" />

                </LinearLayout>
            </LinearLayout>

        </FrameLayout>

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:visibility="gone" />


        <Button
            android:id="@+id/toSignUp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"

            />

        <Button
            android:id="@+id/toSignIn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_auth"
            android:visibility="gone"

            />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
