<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/editLogo"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/menu_edit"
        android:src="@drawable/ic_baseline_edit_note_24"
        app:layout_constraintBottom_toBottomOf="@+id/editedContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleEdit"

        />

    <TextView
        android:id="@+id/titleEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="@string/menu_edit"
        android:singleLine="true"
        android:textColor="@color/purple_500"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/editLogo"
        app:layout_constraintStart_toStartOf="@+id/editLogo"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/editedContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toEndOf="@+id/editLogo"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit"
        tools:text="@sample/posts.json/data/content" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cancel_24"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAfterTitleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="cancel, editedContent, titleEdit, editLogo" />


    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"

        android:padding="@dimen/common_spacing"

        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierAfterTitleEdit" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/content"
        app:srcCompat="@drawable/ic_baseline_check_circle_outline_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
