<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostFragment">


<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:elevation="4dp"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
<!--        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />-->


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="?actionBarSize"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:hint="@string/post_text"
        tools:ignore="LabelFor"
        tools:text="@tools:sample/lorem[150]"
        />

        <FrameLayout
            android:visibility="gone"
            android:id="@+id/photoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/description_photo"
                tools:src="@tools:sample/avatars[4]"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/removePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/remove" />
        </FrameLayout>
    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"

        android:background="?colorSurface"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_photo_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_camera_24dp" />

    </LinearLayout>



<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/ok"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/description_post_save"-->
<!--        app:layout_anchor="@id/bottomAppBar"-->
<!--        app:srcCompat="@drawable/ic_ok_24dp" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
